# SampleCppProject

./: .compile.sh  CMakeLists.txt  run.sh  test.sh
header/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  GTEST.cpp
